# RunnyBabbot

./: .gitignore  README.md  runny-babbot.cabal
src/: RunnyBabbot.hs
src/RunnyBabbot/: Configuration.hs  Database.hs  Spoonerize.hs  Twitter.hs  TwitterData.hs
test/: TestSuite.hs
test/RunnyBabbot/Spoonerize/: Tests.hs
test/RunnyBabbot/Twitter/: Tests.hs
