name:                runny-babbot
version:             0.1.1.1
synopsis:            Re-posts popular tweets in Babbot-speak
homepage:            http://twitter.com/RunnyBabbot
license:             MIT
license-file:        LICENSE
author:              Justin Leitgeb
maintainer:          justin@stackbuilders.com
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:                git
  location:            git://github.com/jsl/runny-babbot.git

test-suite test-runny-babbot
    type:       exitcode-stdio-1.0
    main-is:    TestSuite.hs
    other-modules:
        RunnyBabbot.Twitter.Tests

    hs-source-dirs: src test

    build-depends:
        HUnit >= 1.2 && < 1.3,
        test-framework             >= 0.4 && < 0.9,
        test-framework-hunit       >= 0.2 && < 0.4,
        base > 3 && < 5,

        -- Copy-pasted from runny-babbot dependencies
                     authenticate-oauth == 1.4.*
                     , ConfigFile == 1.1.*
                     , mtl == 2.1.*
                     , http-conduit == 1.9.*
                     , aeson == 0.6.*
                     , text == 0.11.*
                     , random == 1.0.*
                     , regex-posix == 0.95.*
                     , array == 0.4.*
                     , MissingH == 1.2.*
                     , bytestring == 0.10.*
                     , HDBC == 2.3.*
                     , HDBC-sqlite3 == 2.3.*


executable runny-babbot
  main-is:           RunnyBabbot.hs
  other-modules:       RunnyBabbot.Spoonerize
                     , RunnyBabbot.Database
                     , RunnyBabbot.Configuration
                     , RunnyBabbot.Twitter

  hs-source-dirs: src
  build-depends:       base > 3 && < 5
                     , authenticate-oauth == 1.4.*
                     , ConfigFile == 1.1.*
                     , mtl == 2.1.*
                     , http-conduit == 1.9.*
                     , aeson == 0.6.*
                     , text == 0.11.*
                     , random == 1.0.*
                     , regex-posix == 0.95.*
                     , array == 0.4.*
                     , MissingH == 1.2.*
                     , bytestring == 0.10.*
                     , HDBC == 2.3.*
                     , HDBC-sqlite3 == 2.3.*

 if impl(ghc < 7.6)
   build-depends: ghc-prim